<resources>
    <string name="app_name">Balark Connection</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mobile Number</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="confirmation_text">We will send an SMS with a confirmation code to this number</string>
    <string name="next">Next</string>
    <string name="verification_code">Verification code</string>
    <string name="verification_code_request">Please type the verification code sent to you</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="resend_code">Resend code</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="country_code">+91</string>
    <string name="check_valiad_mobile">Number</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_gautra">Gautra</string>
    <string name="hint_email">Email</string>
    <string name="hint_middlename">Middle name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_dob">DOB(DD/MM/YYYY)</string>
    <string name="hint_pob">Birthplace</string>
    <string name="registration">Register</string>
    <string name="hint_password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="hint_your_first_name">Enter your first name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_native">Native</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_birthPlace">Birth Place</string>
    <string name="hint_address">Address</string>
    <string name="hint_merital_status">Merital Status</string>
    <string name="hint_blood_group">Blood group</string>
    <string name="hint_education">Education</string>
    <string name="hint_graduation">Graduation</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_job_title">Job Title</string>
    <string name="street">Street</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="district">Disctrict</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pincode">Pincode</string>
    <string name="hint_family_details">Family details</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="sister">Sister</string>
    <string name="brother">Brother</string>
    <string name="hint_height">Height</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_personal_detail">Personal Detail</string>
    <string name="hint_birthdate">Birth Date</string>
    <string name="action_signout">Singout</string>
    <string name="hint_street">Street</string>
    <string name="hint_area">Area</string>
    <string name="hint_city">City</string>
    <string name="hint_dictrict">District</string>
    <string name="hint_state">State</string>
    <string name="hint_country">Country</string>
    <string name="hint_pincode">Pincode</string>
    <string name="hint_location">Location</string>
    <string name="search_title">Search People</string>
    <string name="search_hint">Search</string>
</resources>
