<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Street-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_edit_address_input_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_street"
                android:lines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>
        <!--Area-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_edit_address_input_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_area"
                android:lines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>
        <!--City-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_edit_address_input_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_city"
                android:lines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>
        <!--District-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_edit_address_input_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dictrict"
                android:lines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>
        <!--State-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_edit_address_input_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_state"
                android:lines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>
        <!--Country-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_edit_address_input_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_country"
                android:lines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>
        <!--Pincode-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_edit_address_input_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pincode"
                android:lines="1"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>
        <!--Save button-->
        <Button
            android:id="@+id/activity_edit_address_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />

    </LinearLayout>

</ScrollView>
